# vibeWM

./: Cargo.toml  README.md
scripts/: setup.sh
src/: backend.rs  backend_drm.rs  command_center.rs  config.rs  input.rs  main.rs  render.rs  render_command_center.rs  state.rs  window.rs
