[package]
name = "vibewm"
version = "0.1.0"
edition = "2021"
authors = ["AJ Gonzalez"]
description = "A vibecode Wayland compositor with vim motions"

[dependencies]
# Wayland compositor framework
smithay = { version = "0.7", default-features = false, features = [
    "desktop",
    "wayland_frontend",
    "renderer_glow",
    "backend_winit",
] }

# Event loop
calloop = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []
udev = ["smithay/backend_drm", "smithay/backend_libinput", "smithay/backend_udev", "smithay/backend_session_libseat"]
xwayland = ["smithay/xwayland"]
